examples/network_policy/allow_dns_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: ns-a
spec:
  podSelector: {} # This applies to all pods in ns-a
  policyTypes:
    - Egress
  egress:
    # Allow traffic to the DNS service in the kube-system namespace
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - protocol: UDP
        port: 53
