examples/network_policy/allow_policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-ns-b-from-ns-a-all-pods
  namespace: ns-b # This policy applies to pods in the 'ns-b' namespace
spec:
  podSelector: {} # Selects all pods in the ns-b namespace
  policyTypes:
    - Ingress
  ingress:
    - from:
        # This namespaceSelector allows traffic from any pod within the 'ns-a' namespace.
        - namespaceSelector:
            matchLabels:
             kubernetes.io/metadata.name: ns-a
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-ns-a-to-ns-b-all-pods
  namespace: ns-a # This policy applies to pods in the 'ns-a' namespace
spec:
  podSelector: {} # Selects all pods in the ns-a namespace
  policyTypes:
    - Egress
  egress:
    - to:
        # This namespaceSelector allows outbound traffic to any pod within the 'ns-b' namespace.
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ns-b
